--- a/css_files/all-products.scss
+++ b/css_files/all-products.scss
@@ -20,23 +20,23 @@
             color: white;
         }
     }
- 
 }
 
 .gaming-section-all {
     width: fit-content;
-    padding:50px;
-    h1{
+    padding: 50px;
+    h1 {
         font-size: 47px;
-        span{
+        span {
             color: red;
         }
     }
     .top-picks {
         width: fit-content;
-        display:flex;
+        display: flex;
+        justify-content: space-evenly;
         align-items: center;
-      flex-wrap: wrap;
+        flex-wrap: wrap;
         margin: 30px auto;
         margin-bottom: 100px;
         .card-1 {
@@ -44,10 +44,11 @@
             height: 380px;
             background-color: rgb(206, 206, 238);
             border-radius: 10px;
+            margin: 0 15px;
+            margin-bottom: 35px;
             position: relative;
-margin-right: 30px;
-margin-bottom: 30px;
             padding: 11px;
+            transition: 0.25s ease;
             .head {
                 width: 100%;
                 height: 52%;
@@ -62,7 +63,22 @@ margin-bottom: 30px;
                     top: 20px;
                     font-weight: bolder;
                     z-index: 10;
-
+                    font-size: 14px;
+                    padding: 5px 15px;
+                    border-top-right-radius: 3px;
+                    border-bottom-right-radius: 3px;
+                }
+                .offer-red-light {
+                    width: fit-content;
+                    height: fit-content;
+                    background-color: white;
+                    color: red;
+                    position: absolute;
+                    left: 0;
+                    font-size: 14px;
+                    top: 20px;
+                    font-weight: bolder;
+                    z-index: 10;
                     padding: 5px 15px;
                     border-top-right-radius: 3px;
                     border-bottom-right-radius: 3px;
@@ -72,11 +88,12 @@ margin-bottom: 30px;
                     height: 100%;
                     object-fit: contain;
                     border-radius: 5px;
+                    //         transition: 1s ease;
                 }
             }
             .tail {
-                margin-top: 10px;
                 width: 100%;
+                height: 48%;
                 height: fit-content;
                 background-color: white;
                 border-radius: 5px;
@@ -110,10 +127,12 @@ margin-bottom: 30px;
                 }
                 .order-btn {
                     width: 100%;
-                    input{
+                    input {
                         width: 100%;
                         padding: 8px 0;
-                        background-color: red;
+
+                        //    background-color: rgb(254,0,0);
+                        background: linear-gradient(to right, rgb(254, 0, 0), rgb(254, 0, 0));
                         color: white;
                         border: none;
                         font-size: medium;
@@ -121,7 +140,17 @@ margin-bottom: 30px;
                         font-family: "Poppins", sans-serif;
                     }
                 }
+                .yellow-btn {
+                    input {
+                        background: linear-gradient(to right, rgb(248, 248, 51), rgb(222, 222, 31));
+                        color: black;
+                    }
+                }
             }
+        }
+        .card-1:hover {
+            background-color: rgb(123, 123, 234);
+            //   outline: 1px solid rgb(206, 206, 238);
         }
     }
 }
