--- a/css_files/common.scss
+++ b/css_files/common.scss
@@ -15,7 +15,8 @@
         justify-content: space-between;
         align-items: center;
         padding: 10px 40px;
-
+       white-space: nowrap;
+       overflow-x: scroll;
         background-color: black;
         .logo {
             h1 {
@@ -128,11 +129,21 @@
         }
     }
 }
+.fg{
+
+    width: 100%;
+    padding: 0 10vw;
+    background-color: rgb(46, 46, 46);
+  
+}
 .fastest-growing {
     width: 100%;
+    white-space: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
     height: fit-content;
     background-color: rgb(46, 46, 46);
-    padding: 15px 10vw;
+    padding: 10px 0vw;
     p {
         color: white;
         font-size: small;
@@ -228,6 +239,9 @@
                 margin: 10px 0;
                 li {
                     list-style: none;
+                    a{
+                        text-decoration: none;
+                    }
                 }
             }
         }
@@ -275,14 +289,13 @@
             }
             .f-2 {
                 h3 {
-                    text-align: center;
+                    text-align: left;
                 }
                 .social-icons {
                     width: fit-content;
-                    margin: 15px auto;
+                    margin: 15px 0;
                     .icons-1 {
                         margin: 0px;
-
                         .img {
                             width: 60px;
                             height: 60px;
