--- a/css_files/my-cart.scss
+++ b/css_files/my-cart.scss
@@ -8,8 +8,8 @@
     height: 100vh;
     background-color: white;
     position: fixed;
- transition: 0.4s ease;
- 
+    transition: 0.4s ease;
+    
     top: 0;
     right: -400px;
     z-index: 1222;
@@ -31,15 +31,12 @@
                     width: 100%;
                     height: 100%;
                     object-fit: contain;
-            
-              
                 }
             }
         }
     }
     .all-cart-items {
         width: 100%;
-     
         height: 60vh;
         white-space: nowrap;
         overflow-y: scroll;
@@ -88,6 +85,7 @@
             .quantity-remove {
                 display: flex;
                 align-items: center;
+                margin: 5px 0;
             }
             .quantity {
                 margin: 20px 0;
@@ -139,61 +137,62 @@
             }
         }
     }
-    .total-pay-buy-more{
-       
-        
-    .total-cart {
-        width: 100%;
-        height: fit-content;
-        padding: 15px;
-        background-color: rgb(202, 200, 200);
-        box-shadow: 0 0 3px black;
-     
-        h4 {
-            color: black;
-            span {
-                color: black;
-            }
-        }
-        h3 {
-            color: black;
-            font-size: large;
-            span {
-                color: black;
-                font-size: larger;
-            }
-        }
-    }
-    .pay-buy-more{
-        padding: 15px;
-        button{
+    .total-pay-buy-more {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 400px;
+        .total-cart {
             width: 100%;
-            padding: 12px 0;
-            margin: 0px 0 10px 0;
-            border-radius: 5px;
-            font-weight: bolder;
-            a{
-                text-decoration: none;
+            height: fit-content;
+            padding: 15px;
+            background-color: rgb(202, 200, 200);
+            box-shadow: 0 0 3px black;
+
+            h4 {
+                color: black;
+                span {
+                    color: black;
+                }
+            }
+            h3 {
+                color: black;
+                font-size: large;
+                span {
+                    color: black;
+                    font-size: larger;
+                }
             }
         }
-        .pay{
-            background-color: red;
-            color: white;
-            border: 2px solid red;
-        }
-        .buy-more{
-            background-color: transparent;
-            border: 2px solid red;
-            color: red;
+        .pay-buy-more {
+            padding: 15px;
+            button {
+                width: 100%;
+                padding: 12px 0;
+                margin: 0px 0 10px 0;
+                border-radius: 5px;
+                font-weight: bolder;
+                a {
+                    text-decoration: none;
+                }
+            }
+            .pay {
+                background-color: red;
+                color: white;
+                border: 2px solid red;
+            }
+            .buy-more {
+                background-color: transparent;
+                border: 2px solid red;
+                color: red;
+            }
         }
     }
-}}
-
+}
 
 @media screen and(max-width:600px) {
-    .my-cart{
+    .my-cart {
         width: 100vw;
         right: -100vw;
-        
     }
 }
