--- a/css_files/product.scss
+++ b/css_files/product.scss
@@ -279,111 +279,113 @@ body {
             }
         }
     }
-    
 
-.gaming-section-all {
-    width: fit-content;
-    padding:50px;
-    h1{
-        font-size: 47px;
-        span{
-            color: red;
-            font-weight: bolder;
-        }
-    }
-    .top-picks {
+    .gaming-section-all {
         width: fit-content;
-        display:flex;
-        align-items: center;
-      flex-wrap: wrap;
-        margin: 30px auto;
-        margin-bottom: 100px;
-        .card-1 {
-            width: 310px;
-            height: 380px;
-            background-color: rgb(206, 206, 238);
-            border-radius: 10px;
-            position: relative;
-margin-right: 30px;
-margin-bottom: 30px;
-            padding: 11px;
-            .head {
-                width: 100%;
-                height: 52%;
-
-                .offer-red {
-                    width: fit-content;
-                    height: fit-content;
-                    background-color: red;
-                    color: white;
-                    position: absolute;
-                    left: 0;
-                    top: 20px;
-                    font-weight: bolder;
-                    z-index: 10;
-
-                    padding: 5px 15px;
-                    border-top-right-radius: 3px;
-                    border-bottom-right-radius: 3px;
-                }
-                img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: contain;
-                    border-radius: 5px;
-                }
+        padding: 50px;
+        background-color: rgb(39, 37, 37);
+        h1 {
+            font-size: 37px;
+            text-align: center;
+            span {
+                color: red;
+                font-weight: bolder;
             }
-            .tail {
-                margin-top: 10px;
-                width: 100%;
-                height: fit-content;
-                background-color: white;
-                border-radius: 5px;
-                text-align: left;
-                padding: 12px;
-                h4 {
-                    color: black;
-                    margin-bottom: 5px;
-                    font-family: "Poppins", sans-serif;
-                }
-                .border {
-                    height: 1px;
+        }
+        .top-picks {
+            width: fit-content;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            flex-wrap: wrap;
+            margin: 30px auto;
+            margin-bottom: 100px;
+            .card-1 {
+                width: 310px;
+                height: 380px;
+                background-color: rgb(206, 206, 238);
+                border-radius: 10px;
+                position: relative;
+                margin-right: 30px;
+                margin-bottom: 30px;
+                padding: 11px;
+                .head {
                     width: 100%;
-                    background-color: rgb(210, 203, 203);
-                }
-                .price {
-                    padding: 10px 0;
-                    h5 {
-                        color: red;
-                        font-size: larger;
-                        span {
-                            color: grey;
-                            text-decoration: line-through;
-                            font-size: small;
-                        }
-                    }
-                    p {
-                        color: green;
-                        font-weight: bolder;
-                    }
-                }
-                .order-btn {
-                    width: 100%;
-                    input{
-                        width: 100%;
-                        padding: 8px 0;
+                    height: 52%;
+
+                    .offer-red {
+                        width: fit-content;
+                        height: fit-content;
                         background-color: red;
                         color: white;
-                        border: none;
-                        font-size: medium;
+                        position: absolute;
+                        left: 0;
+                        top: 20px;
                         font-weight: bolder;
+                        z-index: 10;
+
+                        padding: 5px 15px;
+                        border-top-right-radius: 3px;
+                        border-bottom-right-radius: 3px;
+                    }
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                        border-radius: 5px;
+                    }
+                }
+                .tail {
+                    margin-top: 10px;
+                    width: 100%;
+                    height: fit-content;
+                    background-color: white;
+                    border-radius: 5px;
+                    text-align: left;
+                    padding: 12px;
+                    h4 {
+                        color: black;
+                        margin-bottom: 5px;
                         font-family: "Poppins", sans-serif;
+                    }
+                    .border {
+                        height: 1px;
+                        width: 100%;
+                        background-color: rgb(210, 203, 203);
+                    }
+                    .price {
+                        padding: 10px 0;
+                        h5 {
+                            color: red;
+                            font-size: larger;
+                            span {
+                                color: grey;
+                                text-decoration: line-through;
+                                font-size: small;
+                            }
+                        }
+                        p {
+                            color: green;
+                            font-weight: bolder;
+                        }
+                    }
+                    .order-btn {
+                        width: 100%;
+                        input {
+                            width: 100%;
+                            padding: 8px 0;
+                            background-color: red;
+                            color: white;
+                            border: none;
+                            font-size: medium;
+                            font-weight: bolder;
+                            font-family: "Poppins", sans-serif;
+                        }
                     }
                 }
             }
         }
     }
-}
     .brand-promise {
         padding: 30px;
         background-color: rgb(206, 206, 238);
@@ -418,156 +420,23 @@ margin-bottom: 30px;
             }
         }
     }
-    .reviews {
-        padding: 30px 0;
-        margin: auto;
-        background-color: white;
-        h1 {
-            text-align: center;
-            color: black;
-        }
-        .review-l-r {
-            button {
-                display: none;
-            }
-        }
-        .review-small {
-            display: flex;
-            flex-wrap: wrap;
-            width: 80vw;
-            justify-content: space-between;
-            margin: 5vh auto;
+ 
 
-            .review1,
-            .review2,
-            .review3 {
-                width: 340px;
-                height: 400px;
-                position: relative;
-                margin: 10px auto;
-                .head {
-                    width: 100%;
-                    height: 50%;
-                    text-align: center;
-                    background-color: transparent;
-                    border: 2px solid rgb(98, 98, 101);
-                    border-bottom: none;
-                    position: relative;
-                    border-top-right-radius: 10px;
-                    border-top-left-radius: 10px;
-                    img {
-                        width: 120px;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
-                    }
-                }
-
-                .tail {
-                    padding: 30px 30px 30px 30px;
-                    background-color: red;
-                    border-bottom-left-radius: 10px;
-                    border-bottom-right-radius: 10px;
-                    h5{
-                        text-align: right;
-                    }
-                }
-            }
-        }
-    }
-    .wireless_earphones_common {
-        width: 100%;
-        height: 80vh;
-        display: flex;
-        .part1,
-        .part2 {
-            width: 50%;
-            height: 100%;
-        }
-        .part1 {
-            background-color: rgb(228, 10, 10);
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            .info1 {
-                width: 70%;
-                margin: auto;
-
-                img {
-                    width: 300px;
-                    height: 300px;
-                }
-            }
-        }
-        .part2 {
-            background-color: rgb(54, 54, 54);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: url(../website-images/backgroung-image-4.jpg);
-            background-attachment: fixed;
-
-            background-size: cover;
-            .info2 {
-                width: 70%;
-                .wireless_circle {
-                    margin: 40px auto;
-                    width: 270px;
-                    height: 270px;
-               
-                    border-radius: 50%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    img {
-                        height: 130%;
-                        width: 130%;
-                    }
-                }
-            }
-            border-radius: 50%background-colorred;
-        }
-    }
     .powered_by {
         width: 100vw;
         height: 65vh;
-        display: flex;
+        padding: 0 10vw;
         background: url(../website-images/background-image-5.jpg);
         background-attachment: fixed;
         background-size: cover;
         //     background-color: rgb(227, 13, 13);
-        .img {
-            width: 50%;
-            height: 100%;
-            padding: 30px 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            .i {
-                width: 280px;
-                height: 330px;
-                overflow: visible;
-                //   background-color: rgb(4, 131, 154);
-                border-radius: 10px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                img {
-                    width: 135%;
-                    height: 135%;
-                    object-fit: contain;
-                }
-            }
-        }
+        display: flex;
+        justify-content: center;
+        align-items: center;
         .content {
-            width: 50%;
-            height: 100%;
+            width: 100%;
+            height: fit-content;
             padding: 30px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
         }
     }
     .water_resistance {
@@ -575,55 +444,36 @@ margin-bottom: 30px;
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 60vh;
+        height: 65vh;
         padding: 20px 10vw;
         background-color: rgb(39, 37, 37);
-        .ib {
-            width: 40%;
-            .ii {
-                width: 250px;
-                height: 250px;
-                border-radius: 50%;
-           
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                img {
-                    height: 130%;
-                    width: 130%;
-                }
-            }
-        }
+
         .content {
             padding: 30px;
+            h1 {
+                text-align: right;
+            }
+            p {
+                text-align: right;
+            }
         }
     }
     .one-click {
-        padding: 20px;
-        background-color: grey;
-        display: flex;
-        flex-wrap: wrap;
+        width: 100vw;
         height: fit-content;
-        justify-content: center;
-        align-items: center;
-        .hey_siri {
-            height: fit-content;
-            border-radius: 50%;
-            margin-right: 30px;
-            text-align: center;
-            img {
-                height: 80px;
-                width: 80px;
-                object-fit: cover;
-                border-radius: 50%;
-            }
-        }
-        .one-click-text {
+        //background-color: rgb(39, 37, 37);
+        border-bottom: 12px solid rgb(39, 37, 37);
+       background-color: rgb(203, 203, 238);
+        div {
             height: 100%;
-            align-items: center;
-            display: flex;
-            padding: 0 20px;
-            border-left: 3px solid white;
+            width: fit-content;
+            margin: auto;
+            border-left: 12px solid rgb(39, 37, 37);
+            border-right: 12px solid rgb(39, 37, 37);
+            padding: 25px;
+            h1 {
+                color: rgb(39, 37, 37);
+            }
         }
     }
     .scroll-top {
